// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navigation
    clearFavorites={[Function]}
    currentUser={null}
    history={
        Object {
            "action": "PUSH",
            "length": 14,
            "location": Object {
              "hash": "",
              "key": "opw812",
              "pathname": "/",
              "search": "",
            },
            "replace": [Function],
          }
    }
    setCurrentUser={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="nav-link brand"
          replace={false}
          to="/"
>
          <i
                    className="fas fa-film"
          />
          MovieTracker
</Link>,
        <nav
          className="nav-btns"
>
          <div>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="nav-link"
                              exact={true}
                              onClick={undefined}
                              to="/register"
                    >
                              <i
                                        className="fas fa-user-plus"
                              />
                              Sign Up
                    </NavLink>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="nav-link"
                              exact={true}
                              onClick={undefined}
                              to="/login"
                    >
                              <i
                                        className="fas fa-sign-in-alt"
                              />
                              Login
                    </NavLink>
          </div>
</nav>,
      ],
      "className": "navigation",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <i
              className="fas fa-film"
/>,
            "MovieTracker",
          ],
          "className": "nav-link brand",
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "fas fa-film",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "MovieTracker",
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <NavLink
                        activeClassName="active"
                        aria-current="page"
                        className="nav-link"
                        exact={true}
                        onClick={undefined}
                        to="/register"
            >
                        <i
                                    className="fas fa-user-plus"
                        />
                        Sign Up
            </NavLink>
            <NavLink
                        activeClassName="active"
                        aria-current="page"
                        className="nav-link"
                        exact={true}
                        onClick={undefined}
                        to="/login"
            >
                        <i
                                    className="fas fa-sign-in-alt"
                        />
                        Login
            </NavLink>
</div>,
          "className": "nav-btns",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <NavLink
                activeClassName="active"
                aria-current="page"
                className="nav-link"
                exact={true}
                onClick={undefined}
                to="/register"
>
                <i
                                className="fas fa-user-plus"
                />
                Sign Up
</NavLink>,
              <NavLink
                activeClassName="active"
                aria-current="page"
                className="nav-link"
                exact={true}
                onClick={undefined}
                to="/login"
>
                <i
                                className="fas fa-sign-in-alt"
                />
                Login
</NavLink>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": Array [
                  <i
                    className="fas fa-user-plus"
/>,
                  "Sign Up",
                ],
                "className": "nav-link",
                "exact": true,
                "onClick": undefined,
                "to": "/register",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-user-plus",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "Sign Up",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": Array [
                  <i
                    className="fas fa-sign-in-alt"
/>,
                  "Login",
                ],
                "className": "nav-link",
                "exact": true,
                "onClick": undefined,
                "to": "/login",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-sign-in-alt",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "Login",
              ],
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "nav",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="nav-link brand"
            replace={false}
            to="/"
>
            <i
                        className="fas fa-film"
            />
            MovieTracker
</Link>,
          <nav
            className="nav-btns"
>
            <div>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="nav-link"
                                    exact={true}
                                    onClick={undefined}
                                    to="/register"
                        >
                                    <i
                                                className="fas fa-user-plus"
                                    />
                                    Sign Up
                        </NavLink>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="nav-link"
                                    exact={true}
                                    onClick={undefined}
                                    to="/login"
                        >
                                    <i
                                                className="fas fa-sign-in-alt"
                                    />
                                    Login
                        </NavLink>
            </div>
</nav>,
        ],
        "className": "navigation",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <i
                className="fas fa-film"
/>,
              "MovieTracker",
            ],
            "className": "nav-link brand",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "fas fa-film",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "MovieTracker",
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="nav-link"
                            exact={true}
                            onClick={undefined}
                            to="/register"
              >
                            <i
                                          className="fas fa-user-plus"
                            />
                            Sign Up
              </NavLink>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="nav-link"
                            exact={true}
                            onClick={undefined}
                            to="/login"
              >
                            <i
                                          className="fas fa-sign-in-alt"
                            />
                            Login
              </NavLink>
</div>,
            "className": "nav-btns",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="nav-link"
                  exact={true}
                  onClick={undefined}
                  to="/register"
>
                  <i
                                    className="fas fa-user-plus"
                  />
                  Sign Up
</NavLink>,
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="nav-link"
                  exact={true}
                  onClick={undefined}
                  to="/login"
>
                  <i
                                    className="fas fa-sign-in-alt"
                  />
                  Login
</NavLink>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": Array [
                    <i
                      className="fas fa-user-plus"
/>,
                    "Sign Up",
                  ],
                  "className": "nav-link",
                  "exact": true,
                  "onClick": undefined,
                  "to": "/register",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fas fa-user-plus",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  "Sign Up",
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": Array [
                    <i
                      className="fas fa-sign-in-alt"
/>,
                    "Login",
                  ],
                  "className": "nav-link",
                  "exact": true,
                  "onClick": undefined,
                  "to": "/login",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fas fa-sign-in-alt",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  "Login",
                ],
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "nav",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Navigation should match snapshot when currentUser exists 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navigation
    clearFavorites={[Function]}
    currentUser={
        Object {
            "email": "asdf",
            "id": 2,
            "name": "asdf",
            "password": "asdf",
          }
    }
    setCurrentUser={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="nav-link brand"
          replace={false}
          to="/"
>
          <i
                    className="fas fa-film"
          />
          MovieTracker
</Link>,
        <nav
          className="nav-btns"
>
          <div>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="nav-link"
                              exact={true}
                              to="/favorites"
                    >
                              <i
                                        className="fas fa-heart"
                              />
                              Favorites
                    </NavLink>
                    <Link
                              className="nav-link nav-link-logout"
                              exact={true}
                              onClick={[Function]}
                              replace={false}
                              to="/"
                    >
                              Logout
                    </Link>
          </div>
</nav>,
      ],
      "className": "navigation",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <i
              className="fas fa-film"
/>,
            "MovieTracker",
          ],
          "className": "nav-link brand",
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "fas fa-film",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "MovieTracker",
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            <NavLink
                        activeClassName="active"
                        aria-current="page"
                        className="nav-link"
                        exact={true}
                        to="/favorites"
            >
                        <i
                                    className="fas fa-heart"
                        />
                        Favorites
            </NavLink>
            <Link
                        className="nav-link nav-link-logout"
                        exact={true}
                        onClick={[Function]}
                        replace={false}
                        to="/"
            >
                        Logout
            </Link>
</div>,
          "className": "nav-btns",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <NavLink
                activeClassName="active"
                aria-current="page"
                className="nav-link"
                exact={true}
                to="/favorites"
>
                <i
                                className="fas fa-heart"
                />
                Favorites
</NavLink>,
              <Link
                className="nav-link nav-link-logout"
                exact={true}
                onClick={[Function]}
                replace={false}
                to="/"
>
                Logout
</Link>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": Array [
                  <i
                    className="fas fa-heart"
/>,
                  "Favorites",
                ],
                "className": "nav-link",
                "exact": true,
                "to": "/favorites",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-heart",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
                "Favorites",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Logout",
                "className": "nav-link nav-link-logout",
                "exact": true,
                "onClick": [Function],
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Logout",
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "nav",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="nav-link brand"
            replace={false}
            to="/"
>
            <i
                        className="fas fa-film"
            />
            MovieTracker
</Link>,
          <nav
            className="nav-btns"
>
            <div>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="nav-link"
                                    exact={true}
                                    to="/favorites"
                        >
                                    <i
                                                className="fas fa-heart"
                                    />
                                    Favorites
                        </NavLink>
                        <Link
                                    className="nav-link nav-link-logout"
                                    exact={true}
                                    onClick={[Function]}
                                    replace={false}
                                    to="/"
                        >
                                    Logout
                        </Link>
            </div>
</nav>,
        ],
        "className": "navigation",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <i
                className="fas fa-film"
/>,
              "MovieTracker",
            ],
            "className": "nav-link brand",
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "fas fa-film",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "MovieTracker",
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="nav-link"
                            exact={true}
                            to="/favorites"
              >
                            <i
                                          className="fas fa-heart"
                            />
                            Favorites
              </NavLink>
              <Link
                            className="nav-link nav-link-logout"
                            exact={true}
                            onClick={[Function]}
                            replace={false}
                            to="/"
              >
                            Logout
              </Link>
</div>,
            "className": "nav-btns",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="nav-link"
                  exact={true}
                  to="/favorites"
>
                  <i
                                    className="fas fa-heart"
                  />
                  Favorites
</NavLink>,
                <Link
                  className="nav-link nav-link-logout"
                  exact={true}
                  onClick={[Function]}
                  replace={false}
                  to="/"
>
                  Logout
</Link>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": Array [
                    <i
                      className="fas fa-heart"
/>,
                    "Favorites",
                  ],
                  "className": "nav-link",
                  "exact": true,
                  "to": "/favorites",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fas fa-heart",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  "Favorites",
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Logout",
                  "className": "nav-link nav-link-logout",
                  "exact": true,
                  "onClick": [Function],
                  "replace": false,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Logout",
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "nav",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
